--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ youtube_username: "@3DVisionReadingGroup"
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default.
