--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: 3D Vision Reading Group
-description: >- # this means to ignore newlines until "baseurl:"
-  3D Vision Reading Group webpage.
+description:
+  3D Vision Reading Group webpage. 
 #baseurl: "" # the subpath of your site, e.g. /blog
 url: "3DVisionReadingGroup.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 youtube_username: "@3DVisionReadingGroup"
